--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -1,7 +1,9 @@
+div {
+  margin: 30px 10px;
+}
 .sent {
   background-color: aquamarine;
   padding: 10px;
-  margin: 5px;
   border-radius: 10px;
   width: auto;
 }
